🎨: integrate model data into index.htm view.